k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-jm-deployment
  namespace: app-jm
  labels:
    app: app-jm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-jm
  template:
    metadata:
      labels:
        app: app-jm
    spec:
      containers:
      - name: app-jm
        image: 986052115073.dkr.ecr.us-east-2.amazonaws.com/app-jm:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
