k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-jm
  namespace: app-jm
spec:
  selector:
    app: app-jm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
